--- a/kubernetes/lesson5/ingress.yaml
+++ b/kubernetes/lesson5/ingress.yaml
@@ -21,6 +21,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: backend-service
+            name: frontback-service
             port:
               number: 9002
